# tamaki-solver-wrappers

./: .gitignore  LICENSE  Makefile  PYMEIJI.md  README.md  pyproject.toml
pymeiji/: __init__.py  pymeiji_solver_wrapper.py  tamaki_solver_python_wrapper.py
tamaki_solver_wrapper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_meiji_solver.py
