[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tamaki-solver-wrapper"
version = "0.1.0"
dependencies = [
    "jpype1"
]

[tool.setuptools]
include-package-data = true
packages = ["tamaki_solver_wrapper"]

[tool.setuptools.package-data]
tamaki_solver_wrapper = ["jar/*.jar"]
